# hindsight-clients/go/model_purge_invalidated_request.go
@@ -1,0 +1,136 @@
+/*
+Hindsight HTTP API
+
+HTTP API for Hindsight
+
+API version: 0.7.2
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package hindsight
+
+import (
+	"encoding/json"
+)
+
+// checks if the PurgeInvalidatedRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PurgeInvalidatedRequest{}
+
+// PurgeInvalidatedRequest Request model for permanently deleting invalidated memory units (GC).
+type PurgeInvalidatedRequest struct {
+	OlderThanDays NullableInt32 `json:"older_than_days,omitempty"`
+}
+
+// NewPurgeInvalidatedRequest instantiates a new PurgeInvalidatedRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPurgeInvalidatedRequest() *PurgeInvalidatedRequest {
+	this := PurgeInvalidatedRequest{}
+	return &this
+}
+
+// NewPurgeInvalidatedRequestWithDefaults instantiates a new PurgeInvalidatedRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPurgeInvalidatedRequestWithDefaults() *PurgeInvalidatedRequest {
+	this := PurgeInvalidatedRequest{}
+	return &this
+}
+
+// GetOlderThanDays returns the OlderThanDays field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *PurgeInvalidatedRequest) GetOlderThanDays() int32 {
+	if o == nil || IsNil(o.OlderThanDays.Get()) {
+		var ret int32
+		return ret
+	}
+	return *o.OlderThanDays.Get()
+}
+
+// GetOlderThanDaysOk returns a tuple with the OlderThanDays field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *PurgeInvalidatedRequest) GetOlderThanDaysOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.OlderThanDays.Get(), o.OlderThanDays.IsSet()
+}
+
+// HasOlderThanDays returns a boolean if a field has been set.
+func (o *PurgeInvalidatedRequest) HasOlderThanDays() bool {
+	if o != nil && o.OlderThanDays.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetOlderThanDays gets a reference to the given NullableInt32 and assigns it to the OlderThanDays field.
+func (o *PurgeInvalidatedRequest) SetOlderThanDays(v int32) {
+	o.OlderThanDays.Set(&v)
+}
+// SetOlderThanDaysNil sets the value for OlderThanDays to be an explicit nil
+func (o *PurgeInvalidatedRequest) SetOlderThanDaysNil() {
+	o.OlderThanDays.Set(nil)
+}
+
+// UnsetOlderThanDays ensures that no value is present for OlderThanDays, not even an explicit nil
+func (o *PurgeInvalidatedRequest) UnsetOlderThanDays() {
+	o.OlderThanDays.Unset()
+}
+
+func (o PurgeInvalidatedRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PurgeInvalidatedRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if o.OlderThanDays.IsSet() {
+		toSerialize["older_than_days"] = o.OlderThanDays.Get()
+	}
+	return toSerialize, nil
+}
+
+type NullablePurgeInvalidatedRequest struct {
+	value *PurgeInvalidatedRequest
+	isSet bool
+}
+
+func (v NullablePurgeInvalidatedRequest) Get() *PurgeInvalidatedRequest {
+	return v.value
+}
+
+func (v *NullablePurgeInvalidatedRequest) Set(val *PurgeInvalidatedRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePurgeInvalidatedRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePurgeInvalidatedRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePurgeInvalidatedRequest(val *PurgeInvalidatedRequest) *NullablePurgeInvalidatedRequest {
+	return &NullablePurgeInvalidatedRequest{value: val, isSet: true}
+}
+
+func (v NullablePurgeInvalidatedRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePurgeInvalidatedRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
